--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import "core";
 
 @import "blocks/header";
+@import "blocks/about-us";
 @import "blocks/presentation";
 @import "blocks/content";
 @import "blocks/footer";
